fonts and proptypes package added

--- a/src/index.css
+++ b/src/index.css
@@ -3,17 +3,26 @@ html {
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Nunito', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1rem;
 }
 
+/* Variables */
+:root {
+  --text: rgb(37, 37, 37);
+}
+
+/* Global element styles */
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
+}
+
+p {
+  color: var(--text);
 }
 
 input {
@@ -22,3 +31,5 @@ input {
 input:active, input:focus {
   outline: none;
 }
+
+/* Global styles */
